# Cmaps_RULE

./: .gitignore  README.md  pyproject.toml  实施计划.md
configs/: ablation_plan.yaml  fd001_deep.yaml  fd001_ml.yaml
docs/: asif_2022_gap_analysis.md  dual_lstm_method_spec.md  research_status.md  research_upgrade_plan.md
notebooks/: README.md
reports/: current_report_draft.md  gpu_handoff_2026-06-26.md  learning_checklist.md  mlp_baseline_cuda_summary_2026-07-02.csv  mlp_baseline_note_2026-07-02.md  mlp_full_matrix_note_2026-07-02.md  mlp_full_matrix_summary_2026-07-02.csv  mlp_full_matrix_vs_existing_test_ranks_2026-07-02.csv  paper_outline_imrad.md  preprint_cleanup_execution_2026-07-01.md  progress_roadmap_2026-06-27.md  progress_roadmap_2026-06-28.md  reading_cards.md  repo_cleanup_audit_2026-07-01.md  repo_file_inventory_2026-07-01.csv  research_plan.md  research_upgrade_plan.md  runbook_next_experiments.md  slides_outline.md  small_paper_blueprint.md  technical_report_template.md
scripts/: audit_paper_submission.py  download_cmaps.py  make_arxiv_figures.py  make_claim_trace_outputs.py  make_decision_proxy_outputs.py  make_demo_data.py  make_dual_lstm_paper2_outputs.py  make_paper2_analysis_outputs.py  make_paper2_submission_package.py  make_paper_figures.py  make_safety_benchmark_outputs.py  make_sensitivity_outputs.py  make_tcn_benchmark_outputs.py  make_upgrade_figures.py  package_arxiv_source.py  run_ablation.py  run_decision_simulation.py  run_deep_ablation_matrix.py  run_domain_shift.py  run_dual_lstm_matrix.py  run_fd001.ps1  run_research_matrix.py  (+2 more)
(+145 files in other folders)
