[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmaps-rul-research"
version = "0.1.0"
description = "NASA C-MAPSS turbofan engine RUL prediction research scaffold"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "scikit-learn>=1.3",
  "seaborn>=0.13",
  "torch>=2.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
xgboost = ["xgboost>=2.0"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

